<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ic_nike_logo"
            app:tint="@color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="?textAppearanceHeadline5"
            android:text="@string/signUpScreenTitle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:textAppearance="?textAppearanceBody1"
            android:layout_marginTop="8dp"
            android:text="@string/authHint"/>
        <EditText
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/Theme.Nike.AuthTheme.EditText"
            android:hint="@string/email"/>
        <EditText
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Theme.Nike.AuthTheme.EditText"
            android:hint="@string/password"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/authViewWidth"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:theme="@style/Theme.Nike.AuthTheme.Button"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/singUp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceBody1"
            android:text="@string/loginHint"
            android:alpha="0.4"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginScreenTitle"
            android:fontFamily="@font/primary_bold"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>