<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                app:srcCompat="@drawable/ic_nike_logo"
                android:layout_gravity="center_horizontal"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:hint="جستجو"
                    android:paddingEnd="16dp"
                    android:textSize="15sp"
                    android:textColor="?colorOnSurface"
                    android:textColorHint="?android:textColorSecondary"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:paddingStart="54dp"
                    android:background="@drawable/background_et_search"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="38dp"
                    android:layout_gravity="start|center_vertical"
                    app:srcCompat="@drawable/ic_search"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.viewpager2.widget.ViewPager2
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:id="@+id/bannerSliderViewPager"/>
                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/sliderIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="12dp"
                    app:dotsColor="#E0DCDC"
                    app:dotsCornerRadius="8dp"
                    app:dotsSize="5dp"
                    app:dotsSpacing="3dp"
                    app:dotsWidthFactor="4"
                    app:selectedDotColor="@color/black"
                    app:progressMode="false" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latest"
                    android:textAppearance="?textAppearanceHeadline6"
                    android:textColor="?android:textColorSecondary"
                    android:layout_gravity="center_vertical|start"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/viewLatestProductsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viewAll"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_gravity="center_vertical|end" />
            </FrameLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/latestProductRv"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:clipToPadding="false"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    android:textAppearance="?textAppearanceHeadline6"
                    android:textColor="?android:textColorSecondary"
                    android:layout_gravity="center_vertical|start"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/viewPopularProductsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viewAll"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_gravity="center_vertical|end" />
            </FrameLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/popularProductRv"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:clipToPadding="false"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>